objects/Billing__c.object
<CustomObject>
    <description>Billing Profiles associated to the Group Account will be stored using this object</description>
    <fields>
        <fullName>Automated_Eligibility_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Process Automatic Eligible</description>
        <label>Automated Eligibility Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancellation_Code__c</fullName>
        <description>Cancellation code of the billing</description>
        <label>Cancellation Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CBF – Cancel Billing Profile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <description>Billing profile cancel date.</description>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Explanation__c</fullName>
        <description>Explanantion of the cancellation of billing</description>
        <label>Cancellation Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <description>Cancellation Reason Choices</description>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>401 Misc - Below Percentage</fullName>
                </value>
                <value>
                    <fullName>402 Misc - Reason/Unknown</fullName>
                </value>
                <value>
                    <fullName>403 Misc - Non-Payment of Dues</fullName>
                </value>
                <value>
                    <fullName>404 Misc - Grp Moved Out of State</fullName>
                </value>
                <value>
                    <fullName>405 Misc - Never Effective</fullName>
                </value>
                <value>
                    <fullName>406 Misc - New Group Number</fullName>
                </value>
                <value>
                    <fullName>408 Misc - Other UW Requirements</fullName>
                </value>
                <value>
                    <fullName>409 Misc - Acct has 0 Subs</fullName>
                </value>
                <value>
                    <fullName>410 Misc - Coverage Discontinued</fullName>
                </value>
                <value>
                    <fullName>411 Misc - New Decision Maker</fullName>
                </value>
                <value>
                    <fullName>412 Misc - Trans to Existing Acct</fullName>
                </value>
                <value>
                    <fullName>413 Misc - Broker Recommendation</fullName>
                </value>
                <value>
                    <fullName>414 Misc - Cons Cov w/1+ Carrier</fullName>
                </value>
                <value>
                    <fullName>415 Moved to Other BCBS Plan</fullName>
                </value>
                <value>
                    <fullName>416 Misc - Owner Chg/Merg/Acq</fullName>
                </value>
                <value>
                    <fullName>417 Misc - Parent Co Decision</fullName>
                </value>
                <value>
                    <fullName>418 Misc - Absorbed by ParentGrp</fullName>
                </value>
                <value>
                    <fullName>419 Misc - Out-of-Business</fullName>
                </value>
                <value>
                    <fullName>427 Misc - Political</fullName>
                </value>
                <value>
                    <fullName>433 Misc - Trans Due to Ben Chg</fullName>
                </value>
                <value>
                    <fullName>436 Misc - Changed Brokers</fullName>
                </value>
                <value>
                    <fullName>501 Claims - Service/Problems</fullName>
                </value>
                <value>
                    <fullName>502 Mbrship - Billing Serv/Prob</fullName>
                </value>
                <value>
                    <fullName>503 Service - Local Office</fullName>
                </value>
                <value>
                    <fullName>504 Service - Customer Service</fullName>
                </value>
                <value>
                    <fullName>608 Network - PPO/POS Hospital</fullName>
                </value>
                <value>
                    <fullName>609 Network - PPO/POS Phys</fullName>
                </value>
                <value>
                    <fullName>612 Network - HMO Hospital</fullName>
                </value>
                <value>
                    <fullName>613 Network - HMO Phys Network</fullName>
                </value>
                <value>
                    <fullName>614 Prod Design - Prescription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Status__c</fullName>
        <description>Status of the Cancelled Billing</description>
        <label>Cancellation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Cancellation Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Submitted_Date__c</fullName>
        <description>Date when the cancellation was submitted</description>
        <label>Cancellation Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the Billing Profile for the Group Account</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Billing profile effective date.</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Billing Profile Number for the Group Account</description>
        <externalId>true</externalId>
        <label>Billing Profile Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <description>Biling funding type</description>
        <label>Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>PREM</fullName>
                </value>
                <value>
                    <fullName>SERV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grace_Period__c</fullName>
        <description>Bill Profile Delinquency grace period.</description>
        <label>Grace Period</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Account__c</fullName>
        <description>Group Account associated to the Billing Profile</description>
        <label>Group Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing</relationshipLabel>
        <relationshipName>Billing</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Requested_Cancellation_Date__c</fullName>
        <description>Date when the Billing profile needs to be cancelled</description>
        <label>Requested Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Billing Profile for the Group Account</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Billing</label>
    <nameField>
        <displayFormat>B-{0000000000}</displayFormat>
        <label>Billing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>